norcina-cube3/src/mov/snapshots/norcina_cube3__mov__tests__instance_all_basic_moves-16.snap
---
source: norcina-cube3/src/mov/mod.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RUF (0) is at RUF,
        LUF (0) is at LUF,
        RDF (0) is at RDF,
        LDF (0) is at LDF,
        RDB (2) is at RUB,
        RUB (1) is at LUB,
        LDB (1) is at RDB,
        LUB (2) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        DF (✓) is at DF,
        BR (x) is at UB,
        BL (x) is at DB,
        FR (✓) is at FR,
        DB (x) is at BR,
        FL (✓) is at FL,
        UB (x) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        RD (✓) is at RD,
        LD (✓) is at LD,
    ],
}
