norcina-cube3/src/mov/snapshots/norcina_cube3__mov__tests__instance_all_basic_moves-18.snap
---
source: norcina-cube3/src/mov/mod.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RUF (0) is at RUF,
        LUF (0) is at LUF,
        RDF (0) is at RDF,
        LDF (0) is at LDF,
        LUB (2) is at RUB,
        LDB (1) is at LUB,
        RUB (1) is at RDB,
        RDB (2) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        DF (✓) is at DF,
        BL (x) is at UB,
        BR (x) is at DB,
        FR (✓) is at FR,
        UB (x) is at BR,
        FL (✓) is at FL,
        DB (x) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        RD (✓) is at RD,
        LD (✓) is at LD,
    ],
}
