norcina-cube3/src/mov/snapshots/norcina_cube3__mov__tests__instance_all_basic_moves-8.snap
---
source: norcina-cube3/src/mov/mod.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        LDF (0) is at RUF,
        RDF (0) is at LUF,
        LUF (0) is at RDF,
        RUF (0) is at LDF,
        RUB (0) is at RUB,
        LUB (0) is at LUB,
        RDB (0) is at RDB,
        LDB (0) is at LDB,
    ],
    edges: [
        DF (✓) is at UF,
        UF (✓) is at DF,
        UB (✓) is at UB,
        DB (✓) is at DB,
        FL (✓) is at FR,
        BR (✓) is at BR,
        FR (✓) is at FL,
        BL (✓) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        RD (✓) is at RD,
        LD (✓) is at LD,
    ],
}
