norcina-cube3/src/mov/snapshots/norcina_cube3__mov__tests__instance_all_basic_moves-9.snap
---
source: norcina-cube3/src/mov/mod.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RDF (1) is at RUF,
        RUF (2) is at LUF,
        LDF (2) is at RDF,
        LUF (1) is at LDF,
        RUB (0) is at RUB,
        LUB (0) is at LUB,
        RDB (0) is at RDB,
        LDB (0) is at LDB,
    ],
    edges: [
        FR (x) is at UF,
        FL (x) is at DF,
        UB (✓) is at UB,
        DB (✓) is at DB,
        DF (x) is at FR,
        BR (✓) is at BR,
        UF (x) is at FL,
        BL (✓) is at BL,
        RU (✓) is at RU,
        LU (✓) is at LU,
        RD (✓) is at RD,
        LD (✓) is at LD,
    ],
}
