norcina-cube3/src/mov/snapshots/norcina_cube3__mov__tests__instance_all_basic_moves.snap
---
source: norcina-cube3/src/mov/mod.rs
expression: "Cube::SOLVED.mov_single(mov)"
---
Cube {
    corners: [
        RDF (0) is at RUF,
        LUF (0) is at LUF,
        RDB (0) is at RDF,
        LDF (0) is at LDF,
        RUF (0) is at RUB,
        LUB (0) is at LUB,
        RUB (0) is at RDB,
        LDB (0) is at LDB,
    ],
    edges: [
        UF (✓) is at UF,
        DF (✓) is at DF,
        UB (✓) is at UB,
        DB (✓) is at DB,
        RD (✓) is at FR,
        RU (✓) is at BR,
        FL (✓) is at FL,
        BL (✓) is at BL,
        FR (✓) is at RU,
        LU (✓) is at LU,
        BR (✓) is at RD,
        LD (✓) is at LD,
    ],
}
